--- a/app.json
+++ b/app.json
@@ -7,12 +7,12 @@
         "OWNER_ID":{
             "description": "Id kamu masukkan disini",
             "required": true,
-            "value": 12345
+            "value": 5166575484
         },
         "BOT_TOKEN":{
             "description": "Masukkan Bot token kamu disini",
             "required": true,
-            "value": "12345:AbCdEfg"
+            "value": "5862987915:AAGQKkXOkLyBe41UAhe6qGH-LRzV4p5WJuY"
         }
     }
   }
